# sdmmc

./: .bare-test.toml  Cargo.toml  Makefile  README.md  design.excalidraw
configs/: phytium.bare-test.toml  phytium.test.rs  rockchip.test.rs
docs/: SDMMC开发.md
src/: aux.rs  commands.rs  constants.rs  lib.rs  regs.rs  tools.rs
src/card/: device.rs  mod.rs
src/common/: commands.rs  mod.rs
src/core/: block.rs  clock.rs  cmd.rs  ext.rs  mod.rs
src/embedded_mmc/: aux.rs  commands.rs  mod.rs  regs.rs
src/embedded_mmc/card/: info.rs  mod.rs
src/embedded_mmc/host/: constants.rs  mod.rs
src/embedded_mmc/host/emmc/: block.rs  cmd.rs  ext.rs  mod.rs
src/embedded_mmc/host/sdhci/: backup.rs  block.rs  ext.rs  mod.rs  rockship.rs  xxxx.rs
src/emmc/: aux.rs  block.rs  cmd.rs  constant.rs  info.rs  mod.rs  rockchip.rs
src/host/: mod.rs
src/host/rockchip/: caps.rs  clock.rs  cmd.rs  mod.rs  regs.rs
src/host/rockship/: block.rs  clock.rs  cmd.rs  mod.rs
src/mci/: constants.rs  mci_config.rs  mci_irq.rs  regs.rs
src/mci_core/: block.rs  cmd.rs  ext.rs  mod.rs
src/mci_host/: constants.rs  err.rs  mci_card_base.rs  mci_host_card_detect.rs  mci_host_config.rs  mci_host_device.rs  mod.rs
src/mci_host/mci_sdif/: mod.rs
src/mci_host/sd/: cid.rs  constants.rs  csd.rs  io_voltage.rs  scr.rs  usr_param.rs
src/osa/: consts.rs  err.rs  mod.rs
src/sdhci/: block.rs  cmd.rs  constant.rs  mod.rs
tests/: test.rs
