[package]
name = "sdmmc"
version = "0.1.0"
edition = "2024"

[dependencies]
fdt-parser = "0.4"
aarch64-cpu = "10.0"
bitflags = "2.9"
arm_pl011 = "0.1"
kspin = "0.1"
log = "0.4"
spin = "0.10.0"
dma-api = { version = "0.3", features = ["alloc"] }
paste = "1.0.15"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
cfg-if = "1.0.1"
rlsf = "0.2.1"

[features]
default = ["dma"]
dma = []
pio = []
rockchip = []
phytium = []

[dev-dependencies]
pcie = "0.2"
bare-test = "0.4.1"
byte-unit = { version = "5.1.6", default-features = false, features = ["byte"] }
rk3568_clk = { git = "https://github.com/arceos-hypervisor/rk3568_clk.git" }

[build-dependencies]
bare-test-macros = "0.2"

[[test]]
name = "test"
harness = false
